<resources>
    <string name="app_name">My Application</string>
    <string name="storyLine">
        After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse
        Thanos actions and restore balance to the universe.
    </string>
    <string name="back">Back</string>
    <string name="_13">13+</string>
    <string name="avengers_end_game">Avengers:   End Game</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="storylineName">Storyline</string>
    <string name="cast">Cast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_137_min">137 MIN</string>
    <string name="movies_list">Popular movies</string>
    <string name="errorResults">Something went wrong when downloading movies. Please, check your connection and try again</string>
    <string name="emptyResults">No results matching your query</string>
    <string name="emptyQuery">Empty query</string>
    <string name="terminalError">Unexpected error while trying to fetch movies!</string>
    <string name="loading_error">LOADING ERROR</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_movies">Top movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="channel_new_movie">New movie</string>

</resources>
