<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="155dp"
    android:layout_height="275dp"
    android:layout_margin="14dp"
    app:cardCornerRadius="6dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222232">

        <ImageView
            android:id="@+id/logoFragmentList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_list_avengers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/maskFragmentList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mask_list_avengers"
            app:layout_constraintBottom_toBottomOf="@+id/logoFragmentList"
            app:layout_constraintEnd_toEndOf="@id/logoFragmentList"
            app:layout_constraintStart_toStartOf="@id/logoFragmentList"
            app:layout_constraintTop_toTopOf="@id/logoFragmentList" />

        <ImageView
            android:id="@+id/rectangleFragmentList"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageFragmentList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_13"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rectangleFragmentList"
            app:layout_constraintEnd_toEndOf="@+id/rectangleFragmentList"
            app:layout_constraintStart_toStartOf="@+id/rectangleFragmentList"
            app:layout_constraintTop_toTopOf="@+id/rectangleFragmentList" />

        <TextView
            android:id="@+id/tagFragmentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarFragmentList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <RatingBar
            android:id="@+id/ratingBarFragmentList"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:isIndicator="true"
            android:rating="4"
            android:scaleX=".65"
            android:scaleY=".65"
            android:theme="@style/MyRatingBar"
            android:transformPivotX="0dp"
            android:transformPivotY="10dp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/reviewsFragmentList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="55dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_125_reviews"
            android:textColor="#6D6D80"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarFragmentList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarFragmentList"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/avengers_end_game"
            android:textColor="#ECECEC"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/durationMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/_137_min"
            android:textColor="#6D6D80"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageView
            android:id="@+id/imageViewLikeEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/like_empty" />

        <ImageView
            android:id="@+id/imageViewLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/like" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>